--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 	<header class="scrolled">
 		<div class="container">
-			<div class="row"><a class="logo">Test Token </a><a href="#" class="menutoggle">
+			<div class="row"><a class="logo">Token SALE </a><a href="#" class="menutoggle">
 					<div class="bar"></div>
 				</a>
 				<ul class="menu">
@@ -42,7 +42,7 @@
 							href="https://rinkeby.etherscan.io/address/0xAed093131d4e73C28aBFEe8Dc5A2E11Aa237D68c" target="_blank"
 							class="rocket-btn  rocket-btn-animated-icon rocket-btn-accent"><span
 								class="rocket-btn-icon-wrap"><i class="fa fa-globe" aria-hidden="true"></i></span> <span
-								class="rocket-btn-text-wrap">Bscscan</span></a></li>
+								class="rocket-btn-text-wrap">Rinkebiscan</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -57,14 +57,14 @@
 							<p>NFTs!</p>
 							<p>Metaverse!</p>
 						</div>
-						<h1 class="hero-header">TEST TOKEN<br><span class="typed"></span></h1>
+						<h1 class="hero-header">TOKEN TO THE MOON<br><span class="typed"></span></h1>
 						<p class="hero-text">Get on board the first on-boarding community NFT project.TEST Token helps
 							you to launch your own community-driven NFT universe backed with social tools, media
-							services, and distribution - underpinned by the native $MTK token. </p>
+							services, and distribution - underpinned by the native $TTM token. </p>
 						<div class="button-block"><a href="#presale"
 								class="rocket-btn rocket-btn-animated-icon rocket-btn-fixed-width"><span
 									class="rocket-btn-icon-wrap"><i class="fa fa-rocket" aria-hidden="true"></i></span>
-								<span class="rocket-btn-text-wrap">Claim MTK</span></a></div>
+								<span class="rocket-btn-text-wrap">Claim TTM</span></a></div>
 					</div>
 					<div class="col-sm-7 col-md-6 rocket-section">
 						<div id="bg-wrap">
@@ -492,13 +492,13 @@
 						<div class="pricing pricing-active animated fadeInUp" data-anim-queue="4"
 							data-anim-type="fadeInUp" style="opacity: 0;">
 							<p>Pre-Sale Ends at July 30, 2022</p>
-							<p>$MTK Token will be Listed on Pancakeswap. Listing Price 1 MTK = 5 USD</p>
+							<p>$TTM Token will be Listed on Pancakeswap. Listing Price 1 TTM = 5 USD</p>
 							<div class="pricing-content">
 								<h2 style="color: #FFFFFF; font-size: 32px;" id="demo"></h2>
 								<ul class="collection">
-									<li class="collection-item"><b>Buy 0.05 BNB = 10 MTK</li>
-									<li class="collection-item"><b>Buy 0.5 BNB = 100 MTK</li>
-									<li class="collection-item"><b>Buy 5 BNB = 1000 MTK</li>
+									<li class="collection-item"><b>Buy 0.05 BNB = 10 TTM</li>
+									<li class="collection-item"><b>Buy 0.5 BNB = 100 TTM</li>
+									<li class="collection-item"><b>Buy 5 BNB = 1000 TTM</li>
 								</ul>
 							</div>
 							<input style="display: none;" id="airdropval" class="d-hidden" type="text" value="0.0035">
@@ -536,7 +536,7 @@
 					<div class="section-header animated fadeIn" data-anim-queue="1" data-anim-type="fadeIn"
 						style="opacity: 0;">
 						<h3 class="section-title">Our Roadmap</h3>
-						<p class="section-subtitle">Join TEST Token Future Plans.</p>
+						<p class="section-subtitle">Join To The Moon Token Future Plans.</p>
 						<hr>
 					</div>
 				</div>
@@ -790,7 +790,7 @@
 									</svg></div>
 							</div>
 							<div class="timeline-content right animated fadeInUp" data-anim-queue="8"
-								data-anim-type="fadeInUp" style="opacity: 0;"><span>November, 2022</span>MTK will also
+								data-anim-type="fadeInUp" style="opacity: 0;"><span>November, 2022</span>TTM will also
 								be available for developers interested in deploying their own projects and using MTK
 								for a wide variety of collateral use cases</div>
 						</div>
@@ -820,7 +820,7 @@
 			</div>
 			<div class="bottom-bar">
 				<div class="container">
-					<div class="row text-align-center">© Copyright 2022 - TEST Token. All Rights Reserved.</div>
+					<div class="row text-align-center">© Copyright 2022 - Tp The Moon Token. All Rights Reserved.</div>
 				</div>
 			</div>
 		</div>
